--- a/.babelrc
+++ b/.babelrc
@@ -3,8 +3,9 @@
         [
             "@babel/preset-env",
             {
-                "useBuiltIns": "entry"
-            }
+                "useBuiltIns": "entry",
+            },
         ]
-    ]
+    ],
+    "plugins": ["@babel/plugin-transform-regenerator"]
 }
