--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,8 @@
 {
     "extends": "eslint:recommended",
+    "parser": "babel-eslint",
     "env": {
-        "browser": true,
-        "es6": true,
-        "jquery": true
+        "browser": true
     },
     "plugins": [
         "jquery"
