--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/salexpro/foundation-boilerplate#readme",
   "dependencies": {
+    "@glidejs/glide": "^3.2.7",
     "foundation-sites": "^6.5.3",
     "jquery": "^3.3.1",
     "svg4everybody": "^2.1.9",
